--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 amazonProperties:
   endpointUrl: https://upload-image-shoppingcart.s3.ap-southeast-1.amazonaws.com
-  accessKey: AKIA4YKHWLEWYQ5WDEN4
-  secretKey: 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
+  accessKey: AKIA4YKHWLEWYCEBE4WX
+  secretKey: 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
   bucketName: upload-image-shoppingcart
