--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 amazonProperties:
   endpointUrl: https://upload-image-shoppingcart.s3.ap-southeast-1.amazonaws.com
-  accessKey: AKIA4YKHWLEWYCEBE4WX
-  secretKey: 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
+  accessKey: AKIA4YKHWLEW2INP2T7J
+  secretKey: 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
   bucketName: upload-image-shoppingcart
