--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/shoppingcart
-spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://dpg-cfrie14gqg46pjuivtd0-a.oregon-postgres.render.com:5432/db_spring_boot_render
+spring.datasource.username=db_spring_boot_render_user
+spring.datasource.password=wRzFqVKHdlnIvXI20VtseSnon7EE4EEa
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
