--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,12 @@ spring.jpa.hibernate.ddl-auto= update
 # ===============================
 # HIKARI
 # ===============================
-spring.datasource.testOnBorrow=true
-spring.datasource.validationQuery=SELECT 1
-spring.datasource.hikari.connectionTimeout=30000 
-spring.datasource.hikari.idleTimeout=600000 
-spring.datasource.hikari.maxLifetime=1800000 
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.poolName=SpringBootJPAHikariCP
+spring.datasource.hikari.maxLifetime=600000
+spring.datasource.hikari.connectionTimeout=30000
 
 
 # =======================
