--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,12 +21,28 @@ spring.jpa.hibernate.ddl-auto= update
 # ===============================
 # HIKARI
 # ===============================
-spring.datasource.hikari.minimumIdle=5
-spring.datasource.hikari.maximumPoolSize=20
-spring.datasource.hikari.idleTimeout=30000
-spring.datasource.hikari.poolName=SpringBootJPAHikariCP
-spring.datasource.hikari.maxLifetime=600000
-spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.connection-timeout=50000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=900000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.pool-name=ConnPool
+spring.datasource.hikari.connection-test-query=select 1 from dual
+
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
+spring.datasource.hikari.data-source-properties.useLocalSessionState=true
+spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
+spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
+spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
+spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
+spring.datasource.hikari.data-source-properties.maintainTimeStats=false
+
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+logging.level.com.zaxxer.hikari=TRACE
 
 
 # =======================
