--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
 # =======================
 #  DATABASE
 # =======================
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
-#spring.datasource.username=root
-#spring.datasource.password=khanh0948456075
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
 spring.datasource.url=jdbc:postgresql://dpg-cfrie14gqg46pjuivtd0-a.oregon-postgres.render.com:5432/db_spring_boot_render
 spring.datasource.username=db_spring_boot_render_user
 spring.datasource.password=wRzFqVKHdlnIvXI20VtseSnon7EE4EEa
@@ -21,28 +14,11 @@ spring.jpa.hibernate.ddl-auto= update
 # ===============================
 # HIKARI
 # ===============================
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.connection-timeout=50000
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=900000
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=10
-spring.datasource.hikari.pool-name=ConnPool
-spring.datasource.hikari.connection-test-query=select 1 from dual
-
-spring.datasource.hikari.data-source-properties.cachePrepStmts=true
-spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
-spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
-spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
-spring.datasource.hikari.data-source-properties.useLocalSessionState=true
-spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
-spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
-spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
-spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
-spring.datasource.hikari.data-source-properties.maintainTimeStats=false
-
-logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
-logging.level.com.zaxxer.hikari=TRACE
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=600000
 
 
 # =======================
