--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-# =======================
+# ===============================
 #  DATABASE
-# =======================
+# ===============================
 spring.datasource.url=jdbc:postgresql://dpg-cfrie14gqg46pjuivtd0-a.oregon-postgres.render.com:5432/db_spring_boot_render
 spring.datasource.username=db_spring_boot_render_user
 spring.datasource.password=wRzFqVKHdlnIvXI20VtseSnon7EE4EEa
 
+# ===============================
+#  HIBERNATE
+# ===============================
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.open-in-view=false
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 
@@ -21,8 +24,8 @@ spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=600000
 
 
-# =======================
+# ===============================
 #  FILE SIZE
-# =======================
+# ===============================
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
