--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 spring.datasource.url=jdbc:postgresql://dpg-cfrie14gqg46pjuivtd0-a.oregon-postgres.render.com:5432/db_spring_boot_render
 spring.datasource.username=db_spring_boot_render_user
 spring.datasource.password=wRzFqVKHdlnIvXI20VtseSnon7EE4EEa
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
 #  HIBERNATE
@@ -11,6 +12,7 @@ spring.datasource.password=wRzFqVKHdlnIvXI20VtseSnon7EE4EEa
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
+spring.profiles.active=production
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 
