--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.tomcat.accesslog.enabled=true
 # ===============================
 #  DATABASE
 # ===============================
@@ -14,7 +15,8 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 spring.profiles.active=production
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
 
 # ===============================
 # HIKARI
