--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
           google:
             client-id: 69682817150-uj1a5m4tue0gp6jrkbad21d25i3gh832.apps.googleusercontent.com
             client-secret: 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
-            redirect-uri: http://localhost:8080/oauth2/callback/google
+            redirect-uri: https://shopping-cart-ofji.onrender.com/oauth2/callback/google
             scope:
               - email
               - profile
