--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 #  HIBERNATE
 # ===============================
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.open-in-view=false
-spring.profiles.active=production
+#spring.jpa.open-in-view=false
+#spring.profiles.active=production
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
@@ -26,7 +26,8 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=600000
 
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
+
 
 # ===============================
 #  FILE SIZE
