--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 #  HIBERNATE
 # ===============================
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.open-in-view=false
-#spring.profiles.active=production
+spring.jpa.open-in-view=false
+spring.profiles.active=production
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
