--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=600000
 
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=DEBUG
 #management.security.enabled=false
 
 
