--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,5 @@ logging.level.org.springframework.security=DEBUG
 # ===============================
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+#server.servlet.session.cookie.same-site=None
