--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,27 @@
 # ===============================
 #  DATABASE
 # ===============================
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
+#spring.datasource.username=root
+#spring.datasource.password=khanh0948456075
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/security_jwt
+spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
 spring.datasource.username=root
 spring.datasource.password=khanh0948456075
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 # ===============================
 #  HIBERNATE
 # ===============================
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 spring.profiles.active=production
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
 # ===============================
