--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,26 @@
 # ===============================
 #  DATABASE
 # ===============================
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
-#spring.datasource.username=root
-#spring.datasource.password=khanh0948456075
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.datasource.url=jdbc:postgresql://dpg-cfrie14gqg46pjuivtd0-a.oregon-postgres.render.com:5432/db_spring_boot_render
+#spring.datasource.username=db_spring_boot_render_user
+#spring.datasource.password=wRzFqVKHdlnIvXI20VtseSnon7EE4EEa
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
 spring.datasource.username=root
 spring.datasource.password=khanh0948456075
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-
 # ===============================
 #  HIBERNATE
 # ===============================
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 spring.profiles.active=production
 # Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
 # ===============================
