--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
           google:
             client-id: 69682817150-gsogi2c7kp2ctmd0m7lho189cr991kj3.apps.googleusercontent.com
             client-secret: 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
-            redirect-uri: https://shopping-cart-ofji.onrender.com/oauth2/callback/google
+            redirect-uri: https://shopping-cart-demo.herokuapp.com/oauth2/callback/google
             scope:
               - email
               - profile
