--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,16 @@
 			<artifactId>spring-security-oauth2</artifactId>
 			<version>2.3.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-core</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 
 	</dependencies>
 
