--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,4 +42,8 @@ logging.level.org.springframework.security=DEBUG
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.name=JSESSIONID
+server.servlet.session.cookie.path=/
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
