--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 amazonProperties:
   endpointUrl: https://upload-image-shoppingcart.s3.ap-southeast-1.amazonaws.com
-  accessKey: AKIA4YKHWLEWVKXCBGGM
-  secretKey: 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
+  accessKey: AKIA4YKHWLEW4ZVAGJPU
+  secretKey: 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
   bucketName: upload-image-shoppingcart
 spring:
   main:
