--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
+spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=khanh0948456075
 spring.jpa.hibernate.ddl-auto=update
