--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,10 @@
 			<artifactId>spring-session-data-redis</artifactId>
 			<version>2.7.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
