--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,15 @@ server.servlet.session.cookie.path=/
 server.servlet.session.cookie.same-site=None
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
+
+
+# ===============================
+#  SEND EMAIL
+# ===============================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<Ng??i dùng ??ng nh?p vào máy ch? SMTP>
+spring.mail.password=<M?t kh?u ??ng nh?p vào máy ch? SMTP>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
