--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,8 +54,8 @@ server.servlet.session.cookie.secure=true
 # ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vankhanh.dev@gmail.com
-spring.mail.password=cvgnlobovcxnrcmp
+spring.mail.username=minimogshop.dev@gmail.com
+spring.mail.password=xxxsciiqjrxqztkh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
