--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,8 @@ spring.datasource.validationQuery=SELECT 1
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=600000
-spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle= 10
+spring.datasource.hikari.maximum-pool-size=100
 
 logging.level.org.springframework.security=DEBUG
 #management.security.enabled=false
