--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.profiles.active=production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 # Server properties
-server.tomcat.max-http-post-size=100000000
-server.tomcat.max-swallow-size=100000000
+#server.tomcat.max-http-post-size=100000000
+#server.tomcat.max-swallow-size=100000000
 
 # ===============================
 # HIKARI
