--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=${PORT:8080}
-
 # ===============================
 #  DATABASE
 # ===============================
@@ -7,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=khanh0948456075
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # ===============================
 #  HIBERNATE
@@ -41,7 +40,6 @@ logging.level.org.springframework.security=DEBUG
 # ===============================
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
-
 server.servlet.session.cookie.name=JSESSIONID
 server.servlet.session.cookie.path=/
 server.servlet.session.cookie.same-site=None
