--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # ===============================
 #  HIBERNATE
 # ===============================
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.open-in-view=true
 spring.profiles.active=production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
@@ -24,11 +24,11 @@ spring.jpa.hibernate.show-sql=true
 # HIKARI
 # ===============================
 spring.datasource.testOnBorrow=true
-spring.datasource.validationQuery="SELECT 1"
+spring.datasource.validationQuery=SELECT 1
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
-spring.datasource.hikari.minimum-idle= 10
+spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=100
 logging.level.org.springframework.security=DEBUG
 #management.security.enabled=false
@@ -39,6 +39,11 @@ logging.level.org.springframework.security=DEBUG
 # ===============================
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+
+# ===============================
+#  COOKIE
+# ===============================
 server.servlet.session.cookie.name=JSESSIONID
 server.servlet.session.cookie.path=/
 server.servlet.session.cookie.same-site=None
