--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #  HIBERNATE
 # ===============================
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.open-in-view=true
+spring.jpa.open-in-view=false
 spring.profiles.active=production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
