--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
-spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.maxLifetime=600000
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=100
 logging.level.org.springframework.security=DEBUG
