--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,9 @@ server.port=${PORT:8080}
 #  DATABASE
 # ===============================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-#spring.datasource.username=root
-#spring.datasource.password=khanh0948456075
-
-spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/shoppingcart?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-
-spring.datasource.username=becc2470b18c9f
-spring.datasource.password=fd385907
+spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.username=root
+spring.datasource.password=khanh0948456075
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # ===============================
