--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,10 @@ spring.jpa.hibernate.show-sql=true
 # ===============================
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
+spring.datasource.connection-test-query=SELECT 1
+spring.datasource.test-while-idle=true
+spring.datasource.validation-interval=10000
+spring.datasource.log-validation-errors=true
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=600000
