--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=khanh0948456075
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # ===============================
 #  HIBERNATE
@@ -28,8 +28,8 @@ spring.datasource.validationQuery=SELECT 1
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=600000
-spring.datasource.hikari.minimum-idle=10
-spring.datasource.hikari.maximum-pool-size=100
+#spring.datasource.hikari.minimum-idle=10
+#spring.datasource.hikari.maximum-pool-size=100
 logging.level.org.springframework.security=DEBUG
 #management.security.enabled=false
 
