--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #  HIBERNATE
 # ===============================
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.h2.console.enabled=true
 spring.jpa.open-in-view=false
 spring.profiles.active=production
 spring.jpa.hibernate.ddl-auto=update
