--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=${PORT:8080}
+server.error.whitelabel.enabled = false
 # ===============================
 #  DATABASE
 # ===============================
